objects/copado__User_Story_Commit__c.object
<CustomObject>
    <fields>
        <fullName>copado__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Snapshot_Commit__c</fullName>
        <label>Snapshot Commit</label>
        <referenceTo>copado__Git_Org_Commit__c</referenceTo>
        <relationshipLabel>User Story Commits</relationshipLabel>
        <relationshipName>User_Story_Commits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Commits</relationshipLabel>
        <relationshipName>User_Story_Commits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <formula>HYPERLINK(
	IF(
	AND(NOT(ISNULL(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c)),	copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c != &apos;&apos;), 
		IF(
			AND(NOT(ISPICKVAL(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c +  copado__Snapshot_Commit__r.copado__Commit_Id__c,
			IF(
				CONTAINS(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),
				SUBSTITUTE(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,copado__Snapshot_Commit__r.copado__Commit_Id__c),
				copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c + copado__Snapshot_Commit__r.copado__Commit_Id__c
			)
		),
	&apos;&apos;), 
	copado__Snapshot_Commit__r.copado__Commit_Id__c
)</formula>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
</CustomObject>